Moved transport to an interface. Extracted UDP transport.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,8 +3,8 @@ project(SensorSim CUDA C)
 
 set(CMAKE_CUDA_STANDARD 14)
 
-add_executable(SensorSim sensor/sensor_main.cu sensor/Sensor.cu Message.cu Transport.cu)
-add_executable(ProcessorSim processor/processor_main.cu processor/Processor.cu Message.cu Transport.cu)
+add_executable(SensorSim sensor/sensor_main.cu sensor/Sensor.cu Message.cu transport/UDPTransport.cu)
+add_executable(ProcessorSim processor/processor_main.cu processor/Processor.cu Message.cu transport/UDPTransport.cu)
 
 target_link_libraries(SensorSim pcap)
 
