Created RDMA transport classes. using send semantics. doing 1 send at a time.
Current implementation has delays on the sending loop, otherwise it will get ahead of the receiver. This causes the performance to be slow. Planning update to add a seperate control and data path.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,10 +3,25 @@ project(SensorSim CUDA C)
 
 set(CMAKE_CUDA_STANDARD 14)
 
-add_executable(SensorSim sensor/sensor_main.cu sensor/Sensor.cu Message.cu transport/UDPTransport.cu)
-add_executable(ProcessorSim processor/processor_main.cu processor/Processor.cu Message.cu transport/UDPTransport.cu)
+add_executable(SensorSim
+        sensor/sensor_main.cu
+        sensor/Sensor.cu
+        Message.cu
+        transport/udp_transport.cu
+        transport/rdma_ud_transport.cu
+        )
 
-target_link_libraries(SensorSim pcap)
+target_link_libraries(SensorSim pcap rdmacm ibverbs)
+
+add_executable(ProcessorSim
+        processor/processor_main.cu
+        processor/Processor.cu
+        Message.cu
+        transport/udp_transport.cu
+        transport/rdma_ud_transport.cu
+        )
+
+target_link_libraries(ProcessorSim rdmacm ibverbs)
 
 set_target_properties(
         SensorSim
